deploy/kubernetes/separate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwake
  namespace: media
spec:
  selector:
    app: bitwake
  ports:
    - name: http
      port: 80
      targetPort: webui
      protocol: TCP
