deploy/kubernetes/separate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neotorrent
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-buffering: 'off'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '10'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-request-buffering: 'off'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - torrent.example.com
      secretName: torrent-example-tls
  rules:
    - host: torrent.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neotorrent
                port:
                  name: http
